--- a/IT-W 18BECE30099/6/style.css
+++ b/IT-W 18BECE30099/6/style.css
@@ -26,7 +26,7 @@ ul li a{
   text-decoration: none;
   color: white;
   font-weight: bold;
-  text-transform: uppercase;
+  text-transform: ;
   padding: 5px 10px;
   border: 1px solid transparent;
   transition: 0.5s ease;
